[project]
name = "blindrsa"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = [
    "hatchling",
    "ziglang==0.16.0",
]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/blindrsa"]
artifacts = ["*.so", "__init__.py"]

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "ziglang",
]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]
